# DSwet2

./: .git.gitignore.swp  .gitignore  CMakeLists.txt  CoursesList.h  CoursesManager.cpp  CoursesManagerApp  CoursesTable.cpp  CoursesTableTest.cpp  DynamicArray.h  HashTable.h  List.h  README.md  SortedTree.cpp  SpecialNodes.cpp  a  a.out  hashTabelTest.cpp  library2.cpp  main.Test.cpp  main.cpp  out  test.cpp
assignment/: CoursesTable.cpp  HashTable.h  List.h  SortedTree.cpp  SpecialNodes.cpp  TreeExceptions.h  Triplet.h  submission.txt
assignment/include/: AVLtree.h  CoursesList.h  CoursesManager.h  Pair.h  SortedTree.h  util.h
include/: AVLtree.h  CoursesManager.h  CoursesManagerTest.cpp  CoursesTable.h  DynamicArray.h  HashTable.h  List.h  Pair.h  SortedTree.h  SpecialNodes.h  TreeExceptions.h  Triplet.h  exceptions.h
src/: CoursesManager.cpp  CoursesTable.cpp  SortedTree.cpp  dynamictest.cpp  hashTabelTest.cpp  library2.cpp  mainTest.cpp
tests/: .TestScriptYaniv.sh.swo  .TestScriptYaniv.sh.swp  CoursesManagerTest.cpp  SpecialNodes.cpp  TestScript  TestScriptYaniv.sh  TimeCheck.cpp  generator  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
tests/TamirTest/: BoomSystem_Test_Creator.py  auto_tester.sh  read_this.txt
tests/TamirTest/tests/in/: in_test_0.txt  in_test_1.txt  in_test_10.txt  in_test_11.txt  in_test_12.txt  in_test_13.txt  in_test_14.txt  in_test_15.txt  in_test_16.txt  in_test_17.txt  in_test_18.txt  in_test_19.txt  in_test_2.txt  in_test_3.txt  in_test_4.txt  in_test_5.txt  in_test_6.txt  in_test_7.txt  in_test_8.txt  in_test_9.txt
(+9 files in other folders)
